uplaodd to gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "webcomponents-react",
+  "homepage": "http://anujsharma-bbd.github.io/custom-component-my-resume/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@polymer/lit-element": "^0.7.1"
+    "@polymer/lit-element": "^0.7.1",
+    "gh-pages": "^2.2.0"
   }
 }
