changed http to https

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webcomponents-react",
-  "homepage": "http://anujsharma-bbd.github.io/custom-component-my-resume/",
+  "homepage": "https://anujsharma-bbd.github.io/custom-component-my-resume/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
