--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "lit-html": "^1.1.2",
+    "lit-element": "^2.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
@@ -37,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "@polymer/lit-element": "^0.7.1",
     "gh-pages": "^2.2.0"
   }
 }
