updated resume git url

--- a/src/webcomponents/package.json
+++ b/src/webcomponents/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "\u0016https://github.com/anujsharma-bbd/custom-component-my-resume.git"
+    "url": "https://github.com/anujsharma-bbd/custom-component-my-resume.git"
   },
   "keywords": [
     "json",
